--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -5,8 +5,9 @@
    flex: 1;
    justify-content: space-between;
    align-items: flex-start;
+   flex-wrap: wrap;
    width: 100%;
-   padding-right: 5vw;
+   padding-right: 2.5vw;
 
    &-left {
       display: flex;
